angular-video-crime-miner/src/app/file-rekognition-view/file-rekognition-view.component.scss
@import 'https://fonts.googleapis.com/css?family=Montserrat:300,400,700';

.page-content {
  height:100%;
  overflow-y: auto;
}

button, input[type=submit]{
  display: inline-block;
  outline: none;
  cursor: pointer;
  font-size: 14px;
  line-height: 1;
  border-radius: 500px;
  transition-property: background-color,border-color,color,box-shadow,filter;
  transition-duration: .3s;
  border: 1px solid transparent;
  letter-spacing: 2px;
  min-width: 160px;
  text-transform: uppercase;
  white-space: normal;
  font-weight: 700;
  text-align: center;
  padding: 17px 48px;
  color: #000000;
  background-color: #a4aaf0;
  height: 48px;
  margin-bottom: 10px;
  :hover{
      transform: scale(3.04);
      background-color: #938ce7;
  }
}

h1 {
  font-weight: normal;
  letter-spacing: -1px;
  color: #34495E;
  position: relative;
  width: 80%;
  font-size: 21px;
  font-weight: 600;
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  }
h1 {
  background-image: repeating-radial-gradient(farthest-side at 5px 5px,#553c9a, #ee4b2b, #553c9a);
  }
h1{
  background-image: repeating-radial-gradient
}

.fixedBox1{
  height: 120px;
  border: 1px;
}
.videoplayer{
  height: 700px;
  border: 1px;
  width:1300px;
  border: 10px solid;
  border-image-source: linear-gradient(45deg, #387c37, rgb(255, 255, 255), rgb(169, 0, 34));
  border-image-slice: 1;
}
.scrollbox{
  float: right;
  width: 350px;
  height: 900px;
  overflow:auto;
}
.pageFormat{
  width: 450px;
}
.floatstyle{
  float: left;
  width: 300px;
}

